2005-08-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* TODO: Updated

	* configure.in: Add explicit GLIB requirement to configure

	* src/buoh.c: Save to disk comics seleted by the user

	* src/main.c: Move user directory creation from main to buoh

2005-08-06  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-list.c: Ellipsisation

	* TODO: Updated

2005-08-06  Carlos Garcia Campos  <carlosgc@gnome.org>

	* configure.in: We depend now on GTK+ 2.7.0

2005-08-05  Carlos Garcia Campos  <carlosgc@gnome.org>

	* AUTHORS: Added myself

	* TODO: Updated

	* src/Makefile.am:
	* src/buoh-view-message.[ch]: Added
	* src/buoh-view.[ch]: Remove view status

	Add new widget for the messages view.

	* src/buoh-comic-list.c: Remove frame border and use markup in the
	title label. Implement size_request and size_allocate in order to get
	some extra width for the list.

2005-08-04  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-comic-loader.c: Resolve a bug on threads
	when the application was closed and a comic was
	already loading.

2005-07-31  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-comic-list.c: Change label to "Comic list".
	Remove the shadow of the GtkFrame and added a border.

2005-07-30  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am:
	* src/buoh-comic-loader.[ch]: Added

	* src/buoh-view.[ch], src/buoh-window.[ch]: Remove view status. 
	We only need to know the current page of the view, the comic load 
	status it's now in the BuohComicLoader object.
	Use a thread for the comic loading stuff.

2005-07-29  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-view.c: Remove buoh_view_check_comic_uri, it's slow and we
	don't really need it

2005-07-27  Esteban Sanchez <esteban@steve-o.org>

	* NEWS, AUTHORS, MANTAINERS, README: Updated
	
2005-07-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-window.c: Add callback for the properties comic menu item

	* TODO: updated
