@@ -1,3 +1,12 @@
+2005-08-15  Esteban Sanchez <esteban@steve-o.org>
+
+	* interface/buoh.glade: Added "Save a copy" menu
+	
+	* src/buoh-window.c: Added buoh_window_menu_save_cb for saving
+	a comic to a jpg image
+
+	* po/Makefile.in.in: Removed
+
 2005-08-15  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* TODO: Updated
